; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/winsrv/consrv/frontends/gui/extr_conwnd.c_CreateDerivedFont.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/winsrv/consrv/frontends/gui/extr_conwnd.c_CreateDerivedFont.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8*, i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i8*, i8*)* @CreateDerivedFont to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @CreateDerivedFont(i32* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_5__, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %11 = call i32 @RtlZeroMemory(%struct.TYPE_5__* %10, i32 24)
  %12 = load i32*, i32** %6, align 8
  %13 = call i64 @GetObjectW(i32* %12, i32 24, %struct.TYPE_5__* %10)
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %24

16:                                               ; preds = %4
  %17 = load i32, i32* %7, align 4
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 2
  store i32 %17, i32* %18, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  store i8* %19, i8** %20, align 8
  %21 = load i8*, i8** %9, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  store i8* %21, i8** %22, align 8
  %23 = call i32* @CreateFontIndirectW(%struct.TYPE_5__* %10)
  store i32* %23, i32** %5, align 8
  br label %24

24:                                               ; preds = %16, %15
  %25 = load i32*, i32** %5, align 8
  ret i32* %25
}

declare dso_local i32 @RtlZeroMemory(%struct.TYPE_5__*, i32) #1

declare dso_local i64 @GetObjectW(i32*, i32, %struct.TYPE_5__*) #1

declare dso_local i32* @CreateFontIndirectW(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
